--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>MAIN HTML</h1>
+  <h1 style="blue;">MAIN HTML</h1>
   <p>hello</p>
 </body>
 </html>
